# ai_specialization

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docling/: 1_extraction.py  2_extraction_images.py  3_chunking.py  4_hybrid_chunker.py  5_metadata.py  6_embeddings.py  extraction.py
docling/test_output/: docling_paper_metadata.jsonl
gen_ai/: 01-llm.py  02-llm.py
rag/: 01_rag.py  02-rag_qdrant.py
system_retrieval/: tokenization_01.py  tokenization_boolean_retrieval.py  tokenization_probabilistic_retrieval.py  tokenization_vector_retrieval.py
system_retrieval/index_dir/: MAIN_7l27yenyhh5m7hb1.seg  _MAIN_1.toc
