[project]
name = "ai-specialization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "groq>=0.36.0",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "whoosh>=2.7.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
